test/fails/bad_oop/protected_method.expect
Fatal error: exception Gatorl.CheckUtil.TypeException("Line: 36 -- Protected method access not allowed")
